# SecureLoader

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  ToDo.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: build-release.yml  ci.yml  clean_old_dep.yml  docs.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  FIRMWARE_FORMAT.md  GITHUB_SOURCE_MIGRATION.md  PROTOCOL.md  TROUBLESHOOTING.md  USER_GUIDE.md  index.md
install_scripts/: build.bat  build.sh  run_gui.py  sign.ps1  uninstall.bat  uninstall.sh
src/secure_loader/: __init__.py  config.py
src/secure_loader/cli/: __init__.py  main.py
src/secure_loader/core/: __init__.py  audit.py  firmware.py  protocol.py  updater.py
src/secure_loader/core/sources/: __init__.py  base.py  github.py  http.py  local.py
src/secure_loader/gui/: __init__.py  app.py  login_dialog.py  main_window.py  workers.py
src/secure_loader/i18n/: __init__.py
tests/: conftest.py  test_audit.py  test_cli.py  test_cli_flash.py  test_config.py  test_firmware.py  test_github_source.py  test_gui.py  test_http_source.py  test_local_source.py  test_protocol.py  test_updater.py
